refactor: nuaunce